--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">Let's Connect</p>
-          <a href="mailto:drdeepalijain@yahoo.com" class="cta-btn cta-btn--resume">Call to Action</a>
+          <a href="mailto:drdeepalijain@yahoo.com" class="cta-btn cta-btn--resume">E-Mail Me</a>
         </div>
       </div>
     </section>
