--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               Feel free to reach out to me through any platform.
             </p>
             <span class="about-wrapper__cta">
-              <a href="./assets/Deepali.dev.pdf" class="cta-btn cta-btn--resume">View Resume</a>
+              <a href="./assets/Deepali_resume_fed.pdf" class="cta-btn cta-btn--resume">View Resume</a>
             </span>
           </div>
         </div>
